testData/highlighting/AttributeAnnotations.erl
-<info descr="null"><info descr="null">export</info></info>([<info descr="null"><info descr="null">foo</info></info>/1,<error descr="<q atom> expected, got ']'"> </error> ]).

-<info descr="null"><info descr="null">optional_callbacks</info></info>([]).
-<info descr="null"><info descr="null">include</info></info>("").

<info descr="null"><info descr="null">-</info></info><info descr="null"><info descr="null">type</info></info> <info descr="null"><info descr="null">my_struct_type</info></info>() :: Type.
<info descr="null"><info descr="null">-</info></info><info descr="null"><info descr="null">opaque</info></info> <info descr="null"><info descr="null">my_opaq_type</info></info>() :: Type.

-<info descr="null"><info descr="null">record</info></info>(<info descr="null"><info descr="null">foo</info></info>, {
    bar,
    far,
    far_far,
    away_way
}).
